--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
 
 
 
-  <title>DevConnector: A social network for developers</title>
+  <title>DevSocialHub: A social hub for developers</title>
 </head>
 
 <body>
